--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Daily journal</title>
   </head>
-  <body>
+  <body> 
     <div id="root"></div>
     <script src=",.src/index.js" type="text/jsx"></script>
   </body>
